# multichain-cpp

./: .gitignore  COPYING  Doxyfile.in  Makefile.am  README  configure.ac  multichain-cpp.pc.in
include/multichain-cpp/: Item.hpp  MultiChain.hpp  Stream.hpp  multichain-cpp.hpp
src/: Item.cpp  Makefile.am  MultiChain.cpp  Stream.cpp  example.cpp
